--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Prepnique</title>
+		<title>Prepniquè</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a target="_blank" href="http://www.institutetrainingkol.blogspot.in">Blog</a>
+								<a target="_blank" href="http://www.institutetrainingkol.blogspot.in">Blog (Asad Baqri)</a>
 							</li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
 						</ul>
@@ -59,19 +59,19 @@
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
 								<h3>Experience</h3>
-								<p>A certified personal coach with over 12+ years of experience in training</p>
+								<p>A certified personal coach with over 12+ years of experience in training, who has coached for a variety of interviews where the selection revolves on how impressively you put your innovative ideas across. Her fortè is cabin crew interviews, Front office, other customer relations jobs and fresher interviews</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
 								<h3>Experiantial learning</h3>
-								<p>Both one to one classroom classes/ online sessions</p>
+								<p>We offer a variety of platforms to give you a complete interactive experience tailored as per your requirements. You will get personal attention through Skype, Zoom and other virtual classrooms so that you don't miss out on the personalized aspects of great mentorship</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
 								<h3>Each session mapped to individual challenges and problems</h3>
-								<p>No clue what to write here</p>
+								<p>Our training is a dynamic process, where every session is designed to identify and diagnose your weaknesses so that you can bring your best game on D-Day</p>
 							</section>
 						</div>
 					</section>
@@ -121,7 +121,7 @@
 			<!-- CTA -->
 				<section id="cta">
 
-					<h2>Sign up for Newsletters</h2>
+					<h2>Sign up for beta access</h2>
 					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
 					<form>
@@ -143,6 +143,8 @@
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
 					<ul class="copyright">
@@ -150,7 +152,7 @@
 						<li><b>Ph.:</b> +91 91631 76220</li>
 						<li>For further details contact us <a target="_blank" href="contact.html">here</a></li>
 						<br>
-						<li>&copy; All rights reserved.</li><li>Designed by: <a target="_blank" href="https://riju.co">Riju</a> & <a target="_blank" href="http://nishantthakur.in">Nishant</a></li>
+						<li>&copy; All rights reserved.</li><li>Designed by: <a target="_blank" href="http://riju.co">Riju</a> & <a target="_blank" href="http://nishantthakur.in">Nishant</a></li>
 					</ul>
 				</footer>
 
