--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Prepnique</a></h1>
+					<h1><a href="index.html">Prepniquè</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -25,8 +25,9 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Prepnique</h2>
+					<h2>Prepniquè</h2>
 					<p>No two individuals are alike and neither are their challenges</p>
+                    <p><b>Ph: +91 91631 76220</b></p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Contact us</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
@@ -65,7 +66,7 @@
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
-								<h3>Experiantial learning</h3>
+								<h3>Experiential learning</h3>
 								<p>We offer a variety of platforms to give you a complete interactive experience tailored as per your requirements. You will get personal attention through Skype, Zoom and other virtual classrooms so that you don't miss out on the personalized aspects of great mentorship</p>
 							</section>
 							<section>
@@ -122,7 +123,7 @@
 				<section id="cta">
 
 					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+					<p><b>Ph: +91 91631 76220</b></p>
 
 					<form>
 						<div class="row gtr-50 gtr-uniform">
