--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>Confident Communication</h3>
-								<p>Be it the Hesitant housewife or the reticent student, we have a session customised for everyone to enable them to learn and speak great English communication from the comfort of their home , at their own time.</p>
+								<p>Be it the Hesitant housewife or the reticent student, we have a session customised for everyone to enable them to learn and speak great English from the comfort of their home , at their own time.</p>
 								<ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
