--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
-					<ul class="copyright">
+					<ul class="copyright" style="color: black;">
 						<li><b>Classroom classes:</b> Ajay Nagar and Jora Bridge, Kolkata</li>
 						<li><b>Ph.:</b> +91 91631 76220</li>
 						<li>For further details contact us <a target="_blank" href="contact.html">here</a></li>
