--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Prepniquè</h2>
+					<h1 style="color: black;font-size: 3.5em;">Prepniquè</h1>
 					<p>No two individuals are alike and neither are their challenges</p>
                     <p><b>Ph: +91 91631 76220</b></p>
 					<ul class="actions special">
