--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a target="_blank" href="http://www.institutetrainingkol.blogspot.in">Blog (Asad Baqri)</a>
+								<a target="_blank" href="http://www.institutetrainingkol.blogspot.in">Blog</a>
 							</li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
 						</ul>
